[gd_scene load_steps=13 format=3 uid="uid://b631ut1shx7b8"]

[ext_resource type="Texture2D" uid="uid://cjb6suj3sfqw0" path="res://assets/misc/the_box_title_screen.png" id="1_fxnin"]
[ext_resource type="Script" uid="uid://jqrnnrfhuae1" path="res://scenes/main_menu.gd" id="1_w5i37"]
[ext_resource type="Texture2D" uid="uid://coaxu6qvhi0kc" path="res://assets/misc/title_screen.png" id="2_7vhwp"]
[ext_resource type="Texture2D" uid="uid://c2dwnfutixjke" path="res://assets/misc/black.png" id="2_621bh"]
[ext_resource type="Texture2D" uid="uid://6h77mythsyw3" path="res://assets/misc/start_text.png" id="3_7vhwp"]
[ext_resource type="Texture2D" uid="uid://cdll62crbchyv" path="res://assets/misc/exit_text.png" id="4_kfapv"]
[ext_resource type="Texture2D" uid="uid://bb4elhul0irs1" path="res://assets/misc/selection_arrow.png" id="5_6mm1t"]
[ext_resource type="Script" uid="uid://dmyuuk7c5knw8" path="res://scenes/selection_arrow.gd" id="7_oog62"]
[ext_resource type="Texture2D" uid="uid://cwywj52nnt57o" path="res://assets/misc/credit_text_mm.png" id="8_vqjaf"]
[ext_resource type="AudioStream" uid="uid://klc6x2yf6fqx" path="res://assets/sfx/crack_sfx.mp3" id="10_o07ax"]
[ext_resource type="AudioStream" uid="uid://kc4sdna64vwb" path="res://assets/sfx/space_press.mp3" id="11_ytfje"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oog62"]
size = Vector2(40, 8)

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_w5i37")

[node name="BlackScreen" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(159, 89)
scale = Vector2(24.75, 15.749999)
texture = ExtResource("2_621bh")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(160, 90)

[node name="TheBoxTitleScreen" type="Sprite2D" parent="."]
position = Vector2(266.28, 34.000004)
scale = Vector2(0.68, 0.68)
texture = ExtResource("1_fxnin")

[node name="TitleScreen" type="Sprite2D" parent="."]
position = Vector2(159.28, 29.000002)
scale = Vector2(0.68, 0.68)
texture = ExtResource("2_7vhwp")

[node name="StartText" type="Sprite2D" parent="."]
position = Vector2(158, 97)
texture = ExtResource("3_7vhwp")

[node name="ExitText" type="Sprite2D" parent="StartText"]
position = Vector2(-1, 17)
texture = ExtResource("4_kfapv")

[node name="CreditTextMm" type="Sprite2D" parent="StartText"]
position = Vector2(-124.99997, 76.99997)
scale = Vector2(0.4999999, 0.4999999)
texture = ExtResource("8_vqjaf")

[node name="SelectionArrowStart" type="Sprite2D" parent="."]
position = Vector2(188, 96)
texture = ExtResource("5_6mm1t")
script = ExtResource("7_oog62")

[node name="SelectionArrowExit" type="Sprite2D" parent="."]
position = Vector2(188, 115)
texture = ExtResource("5_6mm1t")
script = ExtResource("7_oog62")

[node name="selectionAreaStart" type="Area2D" parent="."]
position = Vector2(158, 97)

[node name="CollisionShape2D" type="CollisionShape2D" parent="selectionAreaStart"]
shape = SubResource("RectangleShape2D_oog62")

[node name="selectionAreaExit" type="Area2D" parent="."]
position = Vector2(158, 115)

[node name="CollisionShape2D" type="CollisionShape2D" parent="selectionAreaExit"]
shape = SubResource("RectangleShape2D_oog62")

[node name="startSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_o07ax")
pitch_scale = 1.65

[node name="selectSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_ytfje")

[connection signal="mouse_entered" from="selectionAreaStart" to="." method="_on_selection_area_start_mouse_entered"]
[connection signal="mouse_exited" from="selectionAreaStart" to="." method="_on_selection_area_start_mouse_exited"]
[connection signal="mouse_entered" from="selectionAreaExit" to="." method="_on_selection_area_exit_mouse_entered"]
[connection signal="mouse_exited" from="selectionAreaExit" to="." method="_on_selection_area_exit_mouse_exited"]
